fix alignment issue between like icon and image title with flex property align-items

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,6 +10,7 @@
 .card__items {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 
 .card__title {
